// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when there is input type 1`] = `
<fieldset>
  <label />
  <input />
</fieldset>
`;

exports[`renders correctly when there is textarea type 1`] = `
<fieldset>
  <label />
  <textarea />
</fieldset>
`;

exports[`renders correctly with all props input type 1`] = `
<fieldset>
  <label>
    Description
  </label>
  <input
    name="description"
    onChange={[Function]}
    required={true}
  />
</fieldset>
`;
